fix Skeleton loader group alignment

--- a/src/components/SkeletonLoader/SkeletonLoader.scss
+++ b/src/components/SkeletonLoader/SkeletonLoader.scss
@@ -2,6 +2,8 @@
   display: flex;
   gap: 3rem;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .skeleton_loader {
